  * Fixes: NB#244635 - Word suggestion is shown even if there are no characters.
  * Fixes: NB#237208 - Show word suggestion on top of text field if not enough space below
  * Fixes: NB#244195 - Application with keyboard open in landscape mode can be iconified but immediately comes back
  * Fixes: Avoid expensive GConf settings reading in MImOverlay and MImAbstractKeyArea.

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 06 Apr 2011 16:35:14 +0300

meego-keyboard (0.5.38-1) unstable; urgency=low

  * Fixes: NB#237330
  * Fixes: NB#239442 - [TASK] Load VKB layouts dynamically from user folder

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 06 Apr 2011 16:22:51 +0300

meego-keyboard (0.5.37-1) unstable; urgency=low

  * Fixes: NB#236919 - [TASK] Messaging UI Send button doesn't contain blue background

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 30 Mar 2011 17:27:42 +0300

meego-keyboard (0.5.36-1) unstable; urgency=low

  * Fixes: NB#233383 - [TASK] Utilize the empty space next to the right/left side of the VKB efficiently (POT)
  * Fixes: NB#210004 - Predictive text is not effective
  * Fixes: NB#240662 - Label overwrite not working if MTextEdit::setContentType(M::NumberContentType) set
  * Fixes: NB#224052 - Dead keys get stuck

 -- huaming wang <huaming.wang@nokia.com>  Wed, 30 Mar 2011 10:26:27 +0300

meego-keyboard (0.5.35-1) unstable; urgency=low

  * Fixes: NB#237202 - Completely transparent assets are referenced
  * Fixes: NB#238301 - Half English Title showing when switch from Chinese Keyboard to Western Keyboard
  * Fixes: NB#236919 - [TASK] Messaging UI Send button doesn't contain blue background

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Thu, 24 Mar 2011 13:35:39 +0200

meego-keyboard (0.5.35~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#237202 - Completely transparent assets are referenced
  * Fixes: NB#238301 - Half English Title showing when switch from Chinese Keyboard to Western Keyboard